package api

import (
	"aycom/backend/proto/community"
	"context"
)

type CommunityService interface{}
type ChatService interface{}

type CommunityHandler struct {
	community.UnimplementedCommunityServiceServer
	communityService CommunityService
	chatService      ChatService
}

func NewCommunityHandler(communityService CommunityService, chatService ChatService) *CommunityHandler {
	return &CommunityHandler{
		communityService: communityService,
		chatService:      chatService,
	}
}

// Community management
func (h *CommunityHandler) CreateCommunity(ctx context.Context, req *community.CreateCommunityRequest) (*community.CommunityResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) UpdateCommunity(ctx context.Context, req *community.UpdateCommunityRequest) (*community.CommunityResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ApproveCommunity(ctx context.Context, req *community.ApproveCommunityRequest) (*community.CommunityResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) DeleteCommunity(ctx context.Context, req *community.DeleteCommunityRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) GetCommunityByID(ctx context.Context, req *community.GetCommunityByIDRequest) (*community.CommunityResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListCommunities(ctx context.Context, req *community.ListCommunitiesRequest) (*community.ListCommunitiesResponse, error) {
	return nil, nil
}

// Member management
func (h *CommunityHandler) AddMember(ctx context.Context, req *community.AddMemberRequest) (*community.MemberResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) RemoveMember(ctx context.Context, req *community.RemoveMemberRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListMembers(ctx context.Context, req *community.ListMembersRequest) (*community.ListMembersResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) UpdateMemberRole(ctx context.Context, req *community.UpdateMemberRoleRequest) (*community.MemberResponse, error) {
	return nil, nil
}

// Community rules
func (h *CommunityHandler) AddRule(ctx context.Context, req *community.AddRuleRequest) (*community.RuleResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) RemoveRule(ctx context.Context, req *community.RemoveRuleRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListRules(ctx context.Context, req *community.ListRulesRequest) (*community.ListRulesResponse, error) {
	return nil, nil
}

// Join requests
func (h *CommunityHandler) RequestToJoin(ctx context.Context, req *community.RequestToJoinRequest) (*community.JoinRequestResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ApproveJoinRequest(ctx context.Context, req *community.ApproveJoinRequestRequest) (*community.JoinRequestResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) RejectJoinRequest(ctx context.Context, req *community.RejectJoinRequestRequest) (*community.JoinRequestResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListJoinRequests(ctx context.Context, req *community.ListJoinRequestsRequest) (*community.ListJoinRequestsResponse, error) {
	return nil, nil
}

// Chat
func (h *CommunityHandler) CreateChat(ctx context.Context, req *community.CreateChatRequest) (*community.ChatResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) AddChatParticipant(ctx context.Context, req *community.AddChatParticipantRequest) (*community.ChatParticipantResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) RemoveChatParticipant(ctx context.Context, req *community.RemoveChatParticipantRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListChats(ctx context.Context, req *community.ListChatsRequest) (*community.ListChatsResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListChatParticipants(ctx context.Context, req *community.ListChatParticipantsRequest) (*community.ListChatParticipantsResponse, error) {
	return nil, nil
}

// Messages
func (h *CommunityHandler) SendMessage(ctx context.Context, req *community.SendMessageRequest) (*community.MessageResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) DeleteMessage(ctx context.Context, req *community.DeleteMessageRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) UnsendMessage(ctx context.Context, req *community.UnsendMessageRequest) (*community.EmptyResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) ListMessages(ctx context.Context, req *community.ListMessagesRequest) (*community.ListMessagesResponse, error) {
	return nil, nil
}
func (h *CommunityHandler) SearchMessages(ctx context.Context, req *community.SearchMessagesRequest) (*community.ListMessagesResponse, error) {
	return nil, nil
}
